@@ -1,0 +1,8 @@
+#ifndef _GEOS_FUNCS_Y_B_H
+#define _GEOS_FUNCS_Y_B_H
+
+#include <Python.h>
+
+extern int init_geos_funcs_Y_b(PyObject* m, PyObject* d);
+
+#endif
